crates/sdk-tests/tests/template/using_ffi_not_allowed.rs
use svm_sdk::template;

#[template]
mod Template {
    extern "C" {}
}

fn main() {}
